--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -8,6 +8,7 @@
 
   <body>
 <h1> Hello world </h1>
+<p> Viktor was here</p>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
