--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -12,6 +12,7 @@
 <p> Zdravo Site</p>
 <p>Dimitar was here</p>
 <p>Filip was here</p>
+<p>Hello all</p>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
