--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -11,6 +11,7 @@
 <p> Viktor was here</p>
 <p> Zdravo Site</p>
 <p>Dimitar was here</p>
+<p>tomi</p>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
